# fast_mcp

./: .gitignore  api.py  chat_ui.py  docker-compose.yml  host.py  langchain_client.py  mcp_setting.json  model.py  pyproject.toml  server.py  test.py
docs/: local.md
fast_mcp/: Dockerfile  api.py  langchain_client.py  mcp_setting.json  pyproject.toml  server.py
fast_mcp/docs/: local.md
